Fixed Some Glyphs not showing up properly

--- a/public/css/sass/_ud_uikit.scss
+++ b/public/css/sass/_ud_uikit.scss
@@ -1480,7 +1480,7 @@ ul.uk-nav-sub {
   width: 20px;
   margin-right: -10px;
   float: right;
-  font-family: $font;
+  font-family: FontAwesome;
   text-align: center;
 }
 .uk-nav-parent-icon > .uk-parent.uk-open > a:after {
@@ -4918,7 +4918,7 @@ input.uk-search-field {
 .uk-search-close:after {
   display: block;
   content: "\f00d";
-  font-family: $font;
+  font-family: FontAwesome;
 }
 /* Loading icon */
 .uk-loading > .uk-search-close:after {
